Pour le changelog veuillez vous reportez au dépôt git :