@@ -1,0 +1,1 @@
+Vous pouvez effacer ce fichier sans dommages.
